@@ -45,6 +45,13 @@ Notations
 
 - "format" option aware of recursive notations
 
+Library
+
+- Few improvements in ZArith potentially exceptionally breaking the
+  compatibility (useless hypothesys of Zgt_square_simpl and
+  Zlt_square_simpl removed; fixed names mentioning letter O instead of
+  digit 0)
+
 Changes from V8.0beta to V8.0
 =============================
 
